syntax = "proto3";

package custom;

import "codec.proto";
import "gogoproto/gogo.proto";

enum InnerStateEnum {
  INNER_STATE_ENUM_INVALID = 0 [(gogoproto.enumvalue_customname) = "Invalid"];
  INNER_STATE_ENUM_CASE_1 = 1 [(gogoproto.enumvalue_customname) = "CaseOne"];
  INNER_STATE_ENUM_CASE_2 = 2 [(gogoproto.enumvalue_customname) = "CaseTwo"];
}

message InnerState {
  int64 st1 = 1;
  int64 st2 = 2;
}

// ---------- STATE -----------

message TimedState {
  weave.Metadata metadata = 1;
  InnerStateEnum inner_state_enum = 2;
  string str = 3;
  bytes byte = 4;
  // DeleteAt is a deletion event that will take place in future
  // Demonstrates cron usage
  int64 delete_at = 5 [(gogoproto.casttype) = "github.com/iov-one/weave.UnixTime"];
}

message State {
  weave.Metadata metadata = 1;
  InnerState inner_state = 2;
  bytes address = 3 [(gogoproto.casttype) = "github.com/iov-one/weave.Address"];
  // Demonstrates timestamp in models
  int64 created_at = 4 [(gogoproto.casttype) = "github.com/iov-one/weave.UnixTime"];
}

// ---------- MESSAGES -----------

message CreateTimedStateMsg {
  weave.Metadata metadata = 1;
  InnerStateEnum inner_state_enum = 2;
  string str = 3;
  bytes byte = 4;
  // DeleteAt is a deletion event that will take place in future
  // Demonstrates cron usage
  int64 delete_at = 5 [(gogoproto.casttype) = "github.com/iov-one/weave.UnixTime"];
}

message DeleteTimedStateMsg {
  weave.Metadata metadata = 1;
  bytes timed_state_id = 2 [(gogoproto.customname) = "TimedStateID"];
}

message CreateStateMsg {
  weave.Metadata metadata = 1;
  InnerState inner_state = 2;
  bytes address = 3 [(gogoproto.casttype) = "github.com/iov-one/weave.Address"];
}
